# portland_traffic_analysis

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yml  main.py  requirements.txt
examples/: gam.py  medians.py  nn.py  smooth_quantiles.py
mmd/: 570-2-1.Rmd  570-pj-4.Rmd
notebooks/: basic_analysis.ipynb  gam.ipynb
report/: action_plan.tex  bayes_glm.tex  gam_figures.txt  main.tex  median_table.tex  median_table.txt  mmd_figures.tex  quantile_figures.txt  references.bib  report.tex
src/: app.py  convert_time.py  lib.py  main.py  plots.py  test.py  utils.py
traffic_data_analysis/: pyproject.toml
traffic_data_analysis/traffic_data_analysis/: __init__.py  config.py  linear_models.py  neural_network.py  plots.py  preprocess.py  utils.py
traffic_webapp/: pyproject.toml
traffic_webapp/traffic_webapp/: app.py
weekly_reports/: week3.md
